Fix tags alignment and tag labels data passing

--- a/src/styles/components/_tag.scss
+++ b/src/styles/components/_tag.scss
@@ -7,6 +7,7 @@
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
+    align-items: center;
 
     &__link {
         @include text-sm($fw: var(--font-weight-bold));
@@ -15,6 +16,7 @@
         border: 2px solid var(--color-separator);
         display: inline-flex;
         align-items: center;
+        vertical-align: middle;
         gap: 8px;
         padding: var(--item-padding);
         cursor: pointer;
